fix seaborn post

--- a/seaborn_library.html
+++ b/seaborn_library.html
@@ -1747,10 +1747,31 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>Task:</strong></p>
+<pre><code>Make matplotlib plots look nicer
+</code></pre><p><strong>Solution:</strong></p>
+<pre><code>Seaborn
+</code></pre>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><a href="http://nbviewer.ipython.org/urls/raw.github.com/koldunovn/earthpy.org/master/content/notebooks/Seaborn.ipynb">Notebook file</a></p>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <p>We all know and love matplotlib, but I guess most of you agree that the default output of matplotlib is ugly. One can spend hours tweaking the plots, and for sure you will get very nice result at the end - customization is one of the great powers of matplotlib after all. However there is another way - just rely on beautiful defaults created by someone else. Below I will show you couple of examples with Seaborn library, that is based on matplotlib, but make figures look much better. It also provide very simple way to draw statistical graphs, that I will also demonstrate.</p>
 <p><a href="http://stanford.edu/~mwaskom/software/seaborn/">Online documentation</a></p>
 <p><a href="http://stanford.edu/~mwaskom/software/seaborn/tutorial.html">Tutorial</a></p>
-<p><a href="http://nbviewer.ipython.org/urls/raw.github.com/koldunovn/earthpy.org/master/content/notebooks/seaborn_library.ipynb">Notebook file for this post</a></p>
 </div>
 </div>
 </div>
