--- a/archives.html
+++ b/archives.html
@@ -1728,6 +1728,8 @@ jQuery(document).ready(function($) {
 <dl>
     <dt>Di 28 März 2023</dt>
     <dd><a href="http://earthpy.org/first-post.html">About EarthPy</a></dd>
+    <dt>Mo 31 August 2015</dt>
+    <dd><a href="http://earthpy.org/flow.html">Flow duration curves from current USGS NWIS data</a></dd>
     <dt>So 07 Juni 2015</dt>
     <dd><a href="http://earthpy.org/dask.html">Calculations with arrays bigger than your memory (dask arrays)</a></dd>
     <dt>Mo 16 Februar 2015</dt>
