--- a/authors.html
+++ b/authors.html
@@ -1730,6 +1730,7 @@ jQuery(document).ready(function($) {
         <li><a href="http://earthpy.org/author/lars-kaleschke.html">Lars Kaleschke</a> (1)</li>
         <li><a href="http://earthpy.org/author/nikolay-koldunov.html">Nikolay Koldunov</a> (21)</li>
         <li><a href="http://earthpy.org/author/oleksandr-huziy.html">Oleksandr Huziy</a> (1)</li>
+        <li><a href="http://earthpy.org/author/paul-inkenbrandt.html">Paul Inkenbrandt</a> (1)</li>
         <li><a href="http://earthpy.org/author/rob-de-almeida.html">Rob De Almeida</a> (1)</li>
         <li><a href="http://earthpy.org/author/thomas-lavergne.html">Thomas Lavergne</a> (1)</li>
     </ul>
