--- a/archives.html
+++ b/archives.html
@@ -18,7 +18,7 @@
                     <li><a href="http://earthpy.org/category/data-processing.html">Data processing</a></li>
                     <li><a href="http://earthpy.org/category/information.html">Information</a></li>
                     <li><a href="http://earthpy.org/category/introduction-to-python.html">Introduction to Python</a></li>
-                    <li><a href="http://earthpy.org/category/visualization.html">visualization</a></li>
+                    <li><a href="http://earthpy.org/category/visualization.html">Visualization</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -27,6 +27,8 @@
 <dl>
     <dt>Tue 28 March 2023</dt>
     <dd><a href="http://earthpy.org/first-post.html">About EarthPy</a></dd>
+    <dt>Fri 17 February 2017</dt>
+    <dd><a href="http://earthpy.org/cartopy_backgroung.html">Background image in cartopy</a></dd>
     <dt>Mon 31 August 2015</dt>
     <dd><a href="http://earthpy.org/flow.html">Flow duration curves from current USGS NWIS data</a></dd>
     <dt>Sun 07 June 2015</dt>
