--- a/authors.html
+++ b/authors.html
@@ -18,7 +18,7 @@
                     <li><a href="http://earthpy.org/category/data-processing.html">Data processing</a></li>
                     <li><a href="http://earthpy.org/category/information.html">Information</a></li>
                     <li><a href="http://earthpy.org/category/introduction-to-python.html">Introduction to Python</a></li>
-                    <li><a href="http://earthpy.org/category/visualization.html">visualization</a></li>
+                    <li><a href="http://earthpy.org/category/visualization.html">Visualization</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -27,7 +27,7 @@
     <ul>
         <li><a href="http://earthpy.org/author/arcticio.html">Arcticio</a> (2)</li>
         <li><a href="http://earthpy.org/author/lars-kaleschke.html">Lars Kaleschke</a> (1)</li>
-        <li><a href="http://earthpy.org/author/nikolay-koldunov.html">Nikolay Koldunov</a> (21)</li>
+        <li><a href="http://earthpy.org/author/nikolay-koldunov.html">Nikolay Koldunov</a> (22)</li>
         <li><a href="http://earthpy.org/author/oleksandr-huziy.html">Oleksandr Huziy</a> (1)</li>
         <li><a href="http://earthpy.org/author/paul-inkenbrandt.html">Paul Inkenbrandt</a> (1)</li>
         <li><a href="http://earthpy.org/author/rob-de-almeida.html">Rob De Almeida</a> (1)</li>
