--- a/categories.html
+++ b/categories.html
@@ -18,14 +18,14 @@
                     <li><a href="http://earthpy.org/category/data-processing.html">Data processing</a></li>
                     <li><a href="http://earthpy.org/category/information.html">Information</a></li>
                     <li><a href="http://earthpy.org/category/introduction-to-python.html">Introduction to Python</a></li>
-                    <li><a href="http://earthpy.org/category/visualization.html">visualization</a></li>
+                    <li><a href="http://earthpy.org/category/visualization.html">Visualization</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
     <li><a href="http://earthpy.org/category/data-processing.html">Data processing</a></li>
     <li><a href="http://earthpy.org/category/information.html">Information</a></li>
     <li><a href="http://earthpy.org/category/introduction-to-python.html">Introduction to Python</a></li>
-    <li><a href="http://earthpy.org/category/visualization.html">visualization</a></li>
+    <li><a href="http://earthpy.org/category/visualization.html">Visualization</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
