--- a/first-post.html
+++ b/first-post.html
@@ -18,7 +18,7 @@
                     <li><a href="http://earthpy.org/category/data-processing.html">Data processing</a></li>
                     <li class="active"><a href="http://earthpy.org/category/information.html">Information</a></li>
                     <li><a href="http://earthpy.org/category/introduction-to-python.html">Introduction to Python</a></li>
-                    <li><a href="http://earthpy.org/category/visualization.html">visualization</a></li>
+                    <li><a href="http://earthpy.org/category/visualization.html">Visualization</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
