--- a/tags.html
+++ b/tags.html
@@ -18,7 +18,7 @@
                     <li><a href="http://earthpy.org/category/data-processing.html">Data processing</a></li>
                     <li><a href="http://earthpy.org/category/information.html">Information</a></li>
                     <li><a href="http://earthpy.org/category/introduction-to-python.html">Introduction to Python</a></li>
-                    <li><a href="http://earthpy.org/category/visualization.html">visualization</a></li>
+                    <li><a href="http://earthpy.org/category/visualization.html">Visualization</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -27,6 +27,7 @@
     <ul>
         <li><a href="http://earthpy.org/tag/arctic.html">Arctic</a> (2)</li>
         <li><a href="http://earthpy.org/tag/basemap.html">basemap</a> (4)</li>
+        <li><a href="http://earthpy.org/tag/cartopy.html">cartopy</a> (1)</li>
         <li><a href="http://earthpy.org/tag/cython.html">cython</a> (1)</li>
         <li><a href="http://earthpy.org/tag/data-analysis.html">data analysis</a> (3)</li>
         <li><a href="http://earthpy.org/tag/ipython.html">IPython</a> (2)</li>
@@ -43,7 +44,7 @@
         <li><a href="http://earthpy.org/tag/python-for-geosciences.html">python for geosciences</a> (8)</li>
         <li><a href="http://earthpy.org/tag/scipy.html">scipy</a> (1)</li>
         <li><a href="http://earthpy.org/tag/seaborn.html">seaborn</a> (1)</li>
-        <li><a href="http://earthpy.org/tag/visualization.html">visualization</a> (4)</li>
+        <li><a href="http://earthpy.org/tag/visualization.html">visualization</a> (5)</li>
     </ul>
 </section>
 
